--- a/app/src/main/res/layout/launch_details_fragment.xml
+++ b/app/src/main/res/layout/launch_details_fragment.xml
@@ -1,96 +1,130 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                                                   android:layout_width="match_parent"
-                                                   android:layout_height="match_parent"
-                                                   xmlns:tools="http://schemas.android.com/tools"
-                                                   xmlns:app="http://schemas.android.com/apk/res-auto">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <ImageView
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        android:layout_marginTop="50dp"
-        android:id="@+id/missionPatch"
-        android:padding="16dp"
-        tools:src="@drawable/ic_placeholder"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-    />
-    <TextView
-        android:id="@+id/mission_name"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        app:layout_constraintStart_toEndOf="@+id/missionPatch"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/missionPatch"
-        app:layout_constraintBottom_toTopOf="@+id/rocket_name"
-        app:layout_constraintVertical_chainStyle="packed"
-        tools:text="Mission Name"
-        android:layout_marginEnd="10dp"
-        android:layout_marginStart="10dp"
-        android:textSize="24sp"
-        android:textStyle="bold">
-    </TextView>
-    <TextView
-        android:id="@+id/rocket_name"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        app:layout_constraintStart_toEndOf="@+id/missionPatch"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/mission_name"
-        app:layout_constraintBottom_toTopOf="@+id/site"
-        app:layout_constraintVertical_chainStyle="packed"
-        tools:text="🚀 Rocket Name"
-        android:layout_marginEnd="10dp"
-        android:layout_marginStart="10dp"
-        android:textSize="20sp">
-    </TextView>
-    <TextView
-        android:id="@+id/site"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        app:layout_constraintLeft_toRightOf="@+id/missionPatch"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/rocket_name"
-        app:layout_constraintBottom_toBottomOf="@+id/missionPatch"
-        tools:text="Site"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="10dp"
-        android:layout_marginStart="10dp"
-        android:textSize="20sp">
-    </TextView>
+    <data>
 
-    <Button
-        android:id="@+id/book_button"
-        android:layout_width="0dp" android:layout_height="wrap_content"
-        android:backgroundTint="@color/colorPrimary"
-        app:layout_constraintTop_toBottomOf="@id/missionPatch"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        tools:text="book now"
-        android:textColor="@android:color/white"
-        android:layout_marginTop="50dp"
-        android:layout_marginStart="10dp"
-        android:layout_marginEnd="10dp"/>
-    <ProgressBar android:layout_width="wrap_content" android:layout_height="wrap_content"
-                 android:id="@+id/book_progress_bar"
-                 app:layout_constraintStart_toStartOf="@+id/book_button"
-                 app:layout_constraintEnd_toEndOf="@+id/book_button"
-                 app:layout_constraintTop_toTopOf="@+id/book_button"
-                 app:layout_constraintBottom_toBottomOf="@+id/book_button"/>
+        <variable
+            name="isLoading"
+            type="Boolean" />
 
-    <ProgressBar android:layout_width="wrap_content" android:layout_height="wrap_content"
-                 android:id="@+id/progress_bar"
-                 app:layout_constraintStart_toStartOf="parent"
-                 app:layout_constraintEnd_toEndOf="parent"
-                 app:layout_constraintTop_toTopOf="parent"
-                 app:layout_constraintBottom_toBottomOf="parent"/>
+        <variable
+            name="booked"
+            type="Boolean" />
 
-    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
-              android:id="@+id/error"
-              android:text="@string/oh_no"
-              app:layout_constraintStart_toStartOf="parent"
-              app:layout_constraintEnd_toEndOf="parent"
-              app:layout_constraintTop_toTopOf="parent"
-              app:layout_constraintBottom_toBottomOf="parent"/>
+        <variable
+            name="launch"
+            type="com.example.rocketreserver.LaunchQuery.Launch" />
+    </data>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <com.google.android.material.imageview.ShapeableImageView
+            android:id="@+id/missionPatch"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            android:layout_marginTop="50dp"
+            android:padding="16dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:url="@{launch.mission.missionPatch}"
+            tools:src="@drawable/ic_placeholder" />
+
+        <com.google.android.material.textview.MaterialTextView
+            android:id="@+id/mission_name"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"
+            android:text="@{launch.mission.name}"
+            android:textSize="24sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toTopOf="@+id/rocket_name"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/missionPatch"
+            app:layout_constraintTop_toTopOf="@+id/missionPatch"
+            app:layout_constraintVertical_chainStyle="packed"
+            tools:text="Mission Name" />
+
+        <com.google.android.material.textview.MaterialTextView
+            android:id="@+id/rocket_name"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"
+            android:text="@{launch.rocket.name}"
+            android:textSize="20sp"
+            app:layout_constraintBottom_toTopOf="@+id/site"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/missionPatch"
+            app:layout_constraintTop_toBottomOf="@+id/mission_name"
+            app:layout_constraintVertical_chainStyle="packed"
+            tools:text="🚀 Rocket Name" />
+
+        <com.google.android.material.textview.MaterialTextView
+            android:id="@+id/site"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="10dp"
+            android:text="@{launch.site}"
+            android:textSize="20sp"
+            app:layout_constraintBottom_toBottomOf="@+id/missionPatch"
+            app:layout_constraintLeft_toRightOf="@+id/missionPatch"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/rocket_name"
+            tools:text="Site" />
+
+        <Button
+            android:id="@+id/book_button"
+            showHide="@{!isLoading}"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="50dp"
+            android:layout_marginEnd="10dp"
+            android:backgroundTint="@color/colorPrimary"
+            android:text="@{booked ? @string/cancel: @string/book_now}"
+            android:textColor="@android:color/white"
+            tools:text="@string/book_now"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/missionPatch" />
+
+        <ProgressBar
+            android:id="@+id/book_progress_bar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="@+id/book_button"
+            app:layout_constraintEnd_toEndOf="@+id/book_button"
+            app:layout_constraintStart_toStartOf="@+id/book_button"
+            app:layout_constraintTop_toTopOf="@+id/book_button" />
+
+        <ProgressBar
+            android:id="@+id/progress_bar"
+            showHide="@{isLoading}"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <com.google.android.material.textview.MaterialTextView
+            android:id="@+id/error"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/oh_no"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
