--- a/app/src/main/res/layout/launch_item.xml
+++ b/app/src/main/res/layout/launch_item.xml
@@ -1,56 +1,61 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="?selectableItemBackground">
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <ImageView
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:id="@+id/missionPatch"
-        android:padding="16dp"
-        tools:src="@drawable/ic_placeholder"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-    />
-    <TextView
-        android:id="@+id/mission_name"
-        android:layout_width="0dp"
+    <data>
+
+        <variable
+            name="launch"
+            type="com.example.rocketreserver.LaunchListQuery.Launch" />
+    </data>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintStart_toEndOf="@+id/missionPatch"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@+id/site"
-        app:layout_constraintVertical_chainStyle="packed"
-        tools:text="Launch Site #1"
-        android:layout_marginStart="20dp"
-        android:textSize="18sp"
-        android:textStyle="bold">
-    </TextView>
-    <TextView
-        android:id="@+id/site"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        app:layout_constraintLeft_toRightOf="@+id/missionPatch"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/mission_name"
-        app:layout_constraintBottom_toBottomOf="parent"
-        tools:text="Launch Site #1"
-        android:layout_marginTop="8dp"
-        android:layout_marginStart="20dp"
-        android:textSize="18sp">
-    </TextView>
-    <View
-        android:id="@+id/divider"
-        android:layout_width="0dp"
-        android:layout_height="1dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:background="#888"/>
-</androidx.constraintlayout.widget.ConstraintLayout>
+        android:foreground="?selectableItemBackground">
+
+        <com.google.android.material.imageview.ShapeableImageView
+            android:id="@+id/missionPatch"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:contentDescription="@null"
+            android:padding="8dp"
+            android:scaleType="centerCrop"
+            app:url="@{launch.mission.missionPatch}"
+            app:srcCompat="@drawable/ic_placeholder"
+            app:shapeAppearance="@style/ShapeAppearance.Material3.LargeComponent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/mission_name"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
+            android:text="@{launch.mission.name}"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toTopOf="@+id/site"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/missionPatch"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_chainStyle="packed"
+            tools:text="Launch Site #1" />
+
+        <TextView
+            android:id="@+id/site"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="8dp"
+            android:text="@{launch.site}"
+            android:textSize="18sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toRightOf="@+id/missionPatch"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/mission_name"
+            tools:text="Launch Site #1" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
